edited all lorem ipsum to actual content

--- a/My portfolio/portfolio.html
+++ b/My portfolio/portfolio.html
@@ -12,23 +12,39 @@
         <h1 class="logo">DoyeCodes</h1>
         <nav>
           <ul class="nav-links">
-            <li><a href="about">About</a></li>
-            <li><a href="project">Project</a></li>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
     </header>
+    <main>
     <section class="section1">
        <img src="IDTNE2107.JPG" alt="Ogoba david" class="profile-pic">
        <div class="bio">
         <h2 class="bio-title">About me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error perspiciatis iure praesentium totam quaerat inventore fuga sit possimus obcaecati numquam.</p>
+        <p>Hello, my name is <b>Ogoba David Edoye</b> and I'm a frontend developer from Nigeria.</p>
+        <a href=""><button class="portfolio-btn">See my portfolio</button></a>
        </div> 
     </section>
     <section class="more-about">
-        <h2>More about me</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur cum, deleniti maxime velit similique dolores earum harum eum. Ea, a dolore est esse quod tempore? Consectetur doloremque laboriosam id atque.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa incidunt dolor dolorum voluptas in a perferendis eos ipsum maiores, qui nesciunt rerum quaerat quae ut?</p>
+        <h2 id="about">More about me</h2>
+        <p>I started out as a graphic designer in 2020 designing logo's, illustrations, banners and posters locally for small businesses and start-up businesses. My coding journey began in 2021, when i had started working with webite builders such as wordpress and webflow to build websites for entrepreneurs locally.</p>
+        <h4>My priorities</h4>
+        <ul>
+          <li>In building projects i prioritize simplicity and functionality</li>
+          <li>In team projects i prioritize clear and concise communication</li>
+        </ul>
+        <h4>Hobbies</h4>
+        <ul>
+          <li>I love football. I enjoy playing football and watching football.</li>
+          <li>I enjoy bringing designs and functionality in designs to life.</li>
+        </ul>
+        <h4>Other Skills</h4>
+        <ul>
+          <li>Adobe illustrator - I can create logo's, customized icon packs and illustration for web and social media.</li>
+        </ul>
     </section>
     <section class="skills" id="skills">
         <h2 class="skill-header">My top skills</h2>
@@ -39,11 +55,15 @@
         </div>
     </section>
     <section class="services">
-        <h2 class="services-title">My services</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis recusandae qui tempora sapiente delectus non doloribus quibusdam, error maxime libero facilis cum pariatur sunt debitis illo autem explicabo modi. Quisquam.</p>
+        <h2 class="services-title" id="services">My services</h2>
+        <p>If you want to convert your PSD, XD, AI, Zeplin, Sketch, PNG or JPG  file into a responsive website you are at right place and we can discuss the work and proceed. i  make sure i offer;</p>
+        <ul>
+          <li>A resposive design for all devices</li>
+          <li>A neat code that is easy to update and maintain</li>
+        </ul>
     </section>
-    <section class="projects" id="projects">
-        <h2 class="projects-title">Some of my recent projects</h2>
+    <section class="projects">
+        <h2 class="projects-title" id="projects">Some of my recent projects</h2>
         <div class="projects-container">
             <div class="project-card">
                 <img src="screencapture-codepen-io-DoyeDesigns-full-JjvaraM-2022-10-18-12_36_58.png" alt="html table" class="project-pic" loading="lazy">
@@ -65,8 +85,8 @@
             </div>
         </div>
     </section>
-    <section class="contact" id="contact">
-        <h2 class="contact-title">Get in touch with me</h2>
+    <section class="contact">
+        <h2 class="contact-title" id="contact">Get in touch with me</h2>
         <div class="contact-form-container">
             <form action="#" class="contact-form" id="contact-form-id">
                 <label for="name" >Name</label>
@@ -86,6 +106,7 @@
         </div>
     </section>
   </body>
+</main>
   <footer>
     <hr>
     <p class="copy">&copy; Copyright 2021</p>
